--- a/docs/assets/css/just-the-docs-head-nav.css
+++ b/docs/assets/css/just-the-docs-head-nav.css
@@ -11,19 +11,16 @@
 {% endcapture -%}
 
 {%- capture scss -%}
+
+{% include css/just-the-docs.scss.liquid color_scheme=color_scheme %}
+
 .theme-default {
 {% include css/just-the-docs.scss.liquid color_scheme=color_scheme %}
-.site-nav ul li a {
-  background-image: linear-gradient(
-    -90deg,
-    rgba($feedback-color, 1) 0%,
-    rgba($feedback-color, 0.8) 80%,
-    rgba($feedback-color, 0) 100%
-  );
-}
 }
 .theme-dark {
 {% include css/just-the-docs.scss.liquid color_scheme="custom_dark" %}
+}
+
 .site-nav ul li a {
   background-image: linear-gradient(
     -90deg,
@@ -31,7 +28,6 @@
     rgba($feedback-color, 0.8) 80%,
     rgba($feedback-color, 0) 100%
   );
-}
 }
 
 {%- endcapture -%}
